--- a/src/components/Matching/Matching.css
+++ b/src/components/Matching/Matching.css
@@ -6,13 +6,13 @@ body {
 .game-board {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   perspective: 1000px;
   margin-bottom: -15px;
 }
 
 .game-board .card {
-  width: 20%;
+  width: 30%;
   user-select: none;
   height: 112px;
   padding: 10px;
@@ -40,7 +40,7 @@ body {
   font-size: 50px;
   line-height: 120px;
   cursor: pointer;
-  color: #6d1124;
+  color: #f46868;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,8 +55,8 @@ body {
 .game-board .card .front img {
   vertical-align: middle;
   width: 70%;
-  max-width: 150px;
-  max-height: 75%;
+  min-width: 150px;
+  min-height: 75%;
 }
 
 .game-board .card.flipped {
@@ -81,7 +81,7 @@ body {
   color: rgb(255, 255, 255);
   border-radius: 4px;
   font-size: 12px;
-  background-color: #6d1124;
+  background-color: #f46868;
   border: 0;
 }
 
