--- a/src/pages/AddClass/AddClass.css
+++ b/src/pages/AddClass/AddClass.css
@@ -4,28 +4,32 @@
   border-spacing: 0;
   width: 100%;
   font-size: 14px;
+  border-radius: 20px;
+  border: #a3a1a1 2px solid;
 }
 
 .ExcelTable2007 th {
-  /* background-color: #f2f2f2; */
   padding: 10px 30px;
   text-align: left;
-  font-size: 18px;
-  color: #f46868;
-  border-bottom: dashed 2px #e4e1e1;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #a3a1a1;
+  border-bottom: solid 2px #a3a1a1;
+  width: 40%;
 }
 
 .ExcelTable2007 th:first-child {
-  border-top-left-radius: 20px;
+  border-top-left-radius: 13px;
 }
 
 .ExcelTable2007 th:last-child {
-  border-top-right-radius: 20px;
+  border-top-right-radius: 13px;
+  width: 20%;
 }
 
 .ExcelTable2007 td {
   padding: 10px 30px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .ExcelTable2007 tr:nth-child(even) {
@@ -33,9 +37,9 @@
 }
 
 .ExcelTable2007 tr:last-child td:first-child {
-  border-bottom-left-radius: 20px;
+  border-bottom-left-radius: 13px;
 }
 
 .ExcelTable2007 tr:last-child td:last-child {
-  border-bottom-right-radius: 20px;
+  border-bottom-right-radius: 13px;
 }
