--- a/src/pages/AddClass/AddClass.css
+++ b/src/pages/AddClass/AddClass.css
@@ -5,7 +5,7 @@
   width: 100%;
   font-size: 14px;
   border-radius: 20px;
-  border: #a3a1a1 2px solid;
+  border: #545454 2px solid;
 }
 
 .ExcelTable2007 th {
@@ -13,8 +13,8 @@
   text-align: left;
   font-size: 16px;
   color: #ffffff;
-  background-color: #a3a1a1;
-  border-bottom: solid 2px #a3a1a1;
+  background-color: #545454;
+  border-bottom: solid 2px #545454;
   width: 40%;
 }
 
